fix portf wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -381,14 +381,19 @@ img {
 }
 
 .portfolio-list-wrap {
+  overflow: hidden;
+  position: relative;
 }
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  gap: 8px;
+  background-color: var(--WHITE, #fff);
 }
-.portfolio-item:hover {
+.portfolio-item:hover .portfolio-text-hover {
   transform: translateY(0%);
 }
 
@@ -424,6 +429,9 @@ img {
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
+  align-items: center;
+  cursor: pointer;
+
   height: 100%;
   width: 100%;
   transform: translateY(100%);
